# invoice_connector

./: .gitignore  pyproject.toml
invoice_connector/: hooks.py  modules.txt  setup.py
invoice_connector/api/: client.py  endpoints.py  extract.py  invoice_creator.py  mapping.py  polling.py  sync.py
invoice_connector/invoice_processing/doctype/invoice_processing_settings/: invoice_processing_settings.js  invoice_processing_settings.json  invoice_processing_settings.py
invoice_connector/invoice_processing/doctype/invoice_queue/: invoice_queue.js  invoice_queue.json  invoice_queue.py
invoice_connector/public/js/: purchase_invoice.js
