[project]
name = "invoice_connector"
version = "0.1.0"
description = "Frappe app to connect client ERPNext sites with Invoice Extractor & Mapper services"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aerele Technologies", email = "hello@aerele.in" }]
dependencies = ["frappe", "httpx>=0.27"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core:buildapi"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
